k8s/manifests/kubernetes-dashboard-token.api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-api
  namespace: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: token-api
  template:
    metadata:
      labels:
        app: token-api
    spec:
      containers:
        - name: token-api
          image: aidanwallace/kubernetes-dashboard-token-api
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: token-api
  namespace: kubernetes-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: token-api
