k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: token-api-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: token.k8s-dashboard.<root url> # TODO: Update the host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: token-api
                port:
                  number: 80
